--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!-- Note: you may use this starter code, but it is not a requirement -->
 <!DOCTYPE html>
 <html>
   <head>
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="style/style.css">  -->
-     <link rel="stylesheet" href="style/base.css">
+    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/layout.css">
-    <link rel="stylesheet" href="style/modules.css"> 
+    <link rel="stylesheet" href="style/modules.css">
+<script id='template' type="x-tmpl-mustache" > 
+<div class="{{keyword}}" >
+  <h2>{{title}} </h2>
+  <img src="{{image_url}}" alt="{{keyword}}" class="hide" id="{{keyword}}" >
+  <p>{{description}} </p>
+</div>
+</script>
   </head>
   <body>
     <header>
@@ -15,16 +21,25 @@
       <select id="selectEle">
         <option value="default"  class="remove">Filter by Keyword</option>
       </select>
+      <button id="button1" class="active">Page 1  </button>
+      <button id="button2">Page 2</button>
     </header>
     <main>
+      <section class="hide" id= "photo-template-page2">
+        <h2></h2>
+        <img src="" alt="" class="hide">
+        <p></p>
+      </section>
       <section class="hide" id= "photo-template">
         <h2></h2>
         <img src="" alt="" class="hide">
         <p></p>
       </section>
+      <p id="final"></p>
     </main>
     <footer>
       &copy; 2018 Code Fellows
+      <script src="https://unpkg.com/mustache@latest"></script> 
       <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
       <script src="js/app.js"></script>
     </footer>
